# vinbero_dummy

./: .gitlab-ci.yml  CMakeLists.txt  README.md  config.json
src/: CMakeLists.txt  tucube_dummy.c  vinbero_IDUMMY.h  vinbero_IDummy.h  vinbero_Interface_DUMMY.h  vinbero_dummy.c  vinbero_interface_DUMMY.h
